# SolarSystemSimulator

./: .gitignore  README.txt
src/: CMakeLists.txt  config.h  constants.h  gui.cc  gui.h  load_config.cc  main.cc  particle.cc  particle.h  physics.h  procedure_geometry.cc  procedure_geometry.h  render_pass.cc  render_pass.h  solar_system.cc  solar_system.h  texture_to_render.cc  texture_to_render.h
src/config/sol/: 0sun.json  1mercury.json  2venus.json  3earth.json  4mars.json  5jupiter.json  6saturn.json  7uranus.json  8neptune.json  templ.json
src/shaders/: bar.frag  blending.vert  block.frag  block.geom  block.vert  floor.frag  sky.frag  sky.vert  sphere.frag  sphere.geom  sphere.tesc  sphere.tese  sphere.vert
